--- a/res/menu/contact_list_actions.xml
+++ b/res/menu/contact_list_actions.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <!-- Search, should appear as action button -->
     <item android:id="@+id/action_search"
           android:icon="@android:drawable/ic_menu_search"
           android:title="@string/action_search"
           android:showAsAction="ifRoom" />
-    <!-- Settings, should always be in the overflow -->
     <item android:id="@+id/add_new_contact"
           android:title="@string/add_new_contact"
+          android:showAsAction="never" />
+    <item android:id="@+id/sign_out"
+          android:title="@string/sign_out"
           android:showAsAction="never" />
 </menu>
