--- a/res/layout/contact_list_item.xml
+++ b/res/layout/contact_list_item.xml
@@ -1,7 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:focusable="false" android:clickable="true"
+                android:padding="@dimen/contact_icon_margin">
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
+    <QuickContactBadge android:id="@android:id/icon"
+                       android:layout_height="?android:attr/listPreferredItemHeight"
+                       android:layout_width="?android:attr/listPreferredItemHeight"
+                       android:scaleType="centerCrop"
+                       android:src="@drawable/ic_contact_picture_holo_light"
+            />
+
+    <TextView android:id="@+id/contact_name"
+              style="@style/contactNameTitle"
+              android:paddingLeft="@dimen/listview_item_padding"
+              android:paddingRight="@dimen/listview_item_padding"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
-</LinearLayout>
+              android:layout_height="26dp"
+              android:layout_toRightOf="@android:id/icon"
+              android:gravity="center_vertical"
+              android:layout_alignParentRight="true"
+              android:layout_alignParentTop="true"
+              android:layout_alignWithParentIfMissing="true"
+              android:fontFamily="sans-serif-light"
+              android:singleLine="true"
+              android:ellipsize="marquee"
+              android:text="Contact name"
+              android:textAppearance="?android:attr/textAppearanceLarge"/>
+    <TextView android:id="@+id/phone"
+              style="@style/contactPhoneEmail"
+              android:paddingLeft="@dimen/listview_item_padding"
+              android:paddingRight="@dimen/listview_item_padding"
+              android:layout_width="match_parent"
+              android:layout_height="16dp"
+              android:layout_below="@id/contact_name"
+              android:layout_toRightOf="@android:id/icon"
+              android:gravity="center_vertical"
+              android:fontFamily="sans-serif-light"
+              android:singleLine="true"
+              android:ellipsize="marquee"
+              android:text="Phone if any"
+              android:textAppearance="?android:attr/textAppearanceLarge"/>
+    <TextView android:id="@+id/email"
+              style="@style/contactPhoneEmail"
+              android:paddingLeft="@dimen/listview_item_padding"
+              android:paddingRight="@dimen/listview_item_padding"
+              android:layout_width="match_parent"
+              android:layout_height="16dp"
+              android:layout_below="@id/phone"
+              android:layout_toRightOf="@android:id/icon"
+              android:gravity="center_vertical"
+              android:fontFamily="sans-serif-light"
+              android:singleLine="true"
+              android:ellipsize="marquee"
+              android:text="Email if any"
+              android:textAppearance="?android:attr/textAppearanceLarge"/>
+
+</RelativeLayout>
