--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -4,4 +4,6 @@
     <dimen name="logo_margin">5mm</dimen>
     <dimen name="login_button_padding">5mm</dimen>
     <dimen name="inputs_margin">3mm</dimen>
+    <dimen name="listview_item_padding">16dp</dimen>
+    <dimen name="contact_icon_margin">10dp</dimen>
 </resources>
