--- a/res/layout/contact_list_item.xml
+++ b/res/layout/contact_list_item.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" android:focusable="false" android:clickable="true"
-                android:padding="@dimen/contact_icon_margin">
+                android:padding="@dimen/contact_icon_margin"
+                android:background="@drawable/border_ui">
 
     <QuickContactBadge android:id="@android:id/icon"
                        android:layout_height="?android:attr/listPreferredItemHeight"
