--- a/res/layout/contact_list_item.xml
+++ b/res/layout/contact_list_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:focusable="false" android:clickable="true"
+                android:layout_height="wrap_content"
                 android:padding="@dimen/contact_icon_margin"
                 android:background="@drawable/border_ui">
 
@@ -9,6 +9,7 @@
                        android:layout_height="?android:attr/listPreferredItemHeight"
                        android:layout_width="?android:attr/listPreferredItemHeight"
                        android:scaleType="centerCrop"
+                       android:focusable="false"
                        android:src="@drawable/ic_contact_picture_holo_light"
             />
 
