--- a/res/layout/login.xml
+++ b/res/layout/login.xml
@@ -28,6 +28,7 @@
             android:id="@+id/loginButton"
             android:drawableLeft="@drawable/login_button"
             android:paddingLeft="@dimen/login_button_padding"
-            android:paddingRight="@dimen/login_button_padding"/>
+            android:paddingRight="@dimen/login_button_padding"
+            android:enabled="true"/>
 </LinearLayout>
 
