--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="logo_width">25mm</dimen>
+    <dimen name="logo_width">130dp</dimen>
     <dimen name="logo_margin">5mm</dimen>
     <dimen name="login_button_padding">3mm</dimen>
     <dimen name="inputs_margin">3mm</dimen>
@@ -10,4 +10,6 @@
     <dimen name="contact_photo_height">300dp</dimen>
     <dimen name="value_label_padding">10dp</dimen>
     <dimen name="listview_item_padding_half">8dp</dimen>
+    <dimen name="padding_input_edit">5dp</dimen>
+    <dimen name="inputs_width">200dp</dimen>
 </resources>
