--- a/res/layout/contact_list_item.xml
+++ b/res/layout/contact_list_item.xml
@@ -10,8 +10,7 @@
                        android:layout_width="?android:attr/listPreferredItemHeight"
                        android:scaleType="centerCrop"
                        android:focusable="false"
-                       android:src="@drawable/ic_contact_picture_holo_light"
-            />
+                       android:src="@drawable/ic_contact_picture_holo_light"/>
 
     <TextView android:id="@+id/contact_name"
               style="@style/contactNameTitle"
