--- a/res/layout/login.xml
+++ b/res/layout/login.xml
@@ -38,6 +38,6 @@
             android:drawableLeft="@drawable/login_button"
             android:paddingLeft="@dimen/login_button_padding"
             android:paddingRight="@dimen/login_button_padding"
-            android:enabled="true"/>
+            android:enabled="false"/>
 </LinearLayout>
 
