--- a/res/menu/contact_list_actions.xml
+++ b/res/menu/contact_list_actions.xml
@@ -2,7 +2,7 @@
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/action_search"
-          android:icon="@android:drawable/ic_menu_search"
+          android:icon="@drawable/ic_menu_search_holo_light"
           android:title="@string/action_search"
           android:showAsAction="ifRoom" />
     <item android:id="@+id/add_new_contact"
