--- a/res/layout/contact_list_item.xml
+++ b/res/layout/contact_list_item.xml
@@ -3,7 +3,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="@dimen/contact_icon_margin"
-                android:background="@drawable/border_ui">
+                android:background="@drawable/list_item_selector">
 
     <QuickContactBadge android:id="@android:id/icon"
                        android:layout_height="?android:attr/listPreferredItemHeight"
@@ -55,6 +55,8 @@
               android:singleLine="true"
               android:ellipsize="marquee"
               android:text="Email if any"
-              android:textAppearance="?android:attr/textAppearanceLarge"/>
+              android:textAppearance="?android:attr/textAppearanceLarge"/><![CDATA[
+    >
 
+]]>
 </RelativeLayout>
