--- a/res/drawable/list_item_selector.xml
+++ b/res/drawable/list_item_selector.xml
@@ -2,6 +2,7 @@
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true" android:drawable="@drawable/list_pressed" />
-    <item android:state_activated="true" android:drawable="@drawable/list_activated"  />
+    <item android:state_checked="true" android:drawable="@drawable/list_activated"/>
+    <item android:state_activated="true" android:drawable="@drawable/list_activated"/>
     <item android:drawable="@drawable/list_default" />
 </selector>
