--- a/res/layout/contact_detail.xml
+++ b/res/layout/contact_detail.xml
@@ -8,18 +8,21 @@
             android:orientation="vertical"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content">
+
         <ImageView
                 android:id="@+id/contact_photo"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="@dimen/photo_height"
                 android:scaleType="centerCrop"
                 android:src="@drawable/ic_contact_picture_180_holo_light"
                 android:contentDescription="@string/image_view_description"/>
+
         <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="fill_parent"
                 android:id="@+id/contact_detail_layout"
                 android:layout_height="fill_parent">
+
         </LinearLayout>
     </LinearLayout>
 </ScrollView>
