--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -9,4 +9,5 @@
     <dimen name="value_label_padding">10dp</dimen>
     <dimen name="padding_input_edit">5dp</dimen>
     <dimen name="inputs_width">200dp</dimen>
+    <dimen name="photo_height">200dp</dimen>
 </resources>
