--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -22,8 +22,8 @@
          <item name="colorPrimaryDark">@color/my_primary_dark</item>
          <item name="colorAccent">@color/accent</item>
 
-         <item name="android:windowTranslucentStatus">true</item>
-         <item name="android:windowTranslucentNavigation">true</item>
+<!--         <item name="android:windowTranslucentStatus">true</item>
+         <item name="android:windowTranslucentNavigation">true</item>-->
      </style>
 
 
