--- a/res/layout/login.xml
+++ b/res/layout/login.xml
@@ -38,6 +38,6 @@
             android:drawableLeft="@drawable/login_button_selector"
             android:paddingLeft="@dimen/login_button_padding"
             android:paddingRight="@dimen/login_button_padding"
-            android:enabled="false"/>
+            android:enabled="true"/>
 </LinearLayout>
 
